# NaturalPy

./: .gitignore  README.md  pyproject.toml
examples/: Dockerfile  README.md  docker.py  example_halting_problem.py  example_hello_world.py  example_mean.py  example_variance_sketch.py  example_variance_tester.py  example_veriance_helper.py  gpt.py
naturalpy/: __init__.py  implementer.py  tester.py  utils.py
